--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==0.9.10
 beautifulsoup4==4.6.3
+blinker==1.4
 certifi==2018.8.13
 chardet==3.0.4
 click==6.7
@@ -8,6 +9,7 @@ Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
 Flask-GoogleCharts==0.0.3
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
@@ -19,6 +21,7 @@ Mako==1.0.7
 MarkupSafe==1.0
 pipenv==2018.7.1
 psycopg2==2.7.5
+PyJWT==1.6.4
 python-dateutil==2.7.3
 python-editor==1.0.3
 requests==2.19.1
